fabrique-derive/tests/ui/derive_on_unit_struct.rs
use fabrique_derive::Factory;

#[derive(Factory)]
struct Anvil;

fn main() {}